--- a/src/style.css
+++ b/src/style.css
@@ -120,24 +120,6 @@
         @apply bg-background text-foreground;
     }
 }
-
-@font-face {
-    font-family: "Inter Variable";
-    src:
-        url("/fonts/Inter-VariableFont_opsz,wght.woff2")
-            format("woff2-variations"),
-        url("/fonts/Inter-VariableFont_opsz,wght.woff2")
-            format("woff2 supports variations"),
-        url("/fonts/Inter-VariableFont_opsz,wght.ttf")
-            format("truetype-variations"),
-        url("/fonts/Inter-VariableFont_opsz,wght.eot?#iefix")
-            format("embedded-opentype"),
-        url("/fonts/Inter-VariableFont_opsz,wght.woff") format("woff");
-    font-weight: 100 900;
-    font-style: normal;
-    font-display: swap;
-}
-
 /* For Chrome, Edge, Safari */
 input[type="number"].no-spinners::-webkit-outer-spin-button,
 input[type="number"].no-spinners::-webkit-inner-spin-button {
@@ -149,10 +131,102 @@ input[type="number"].no-spinners::-webkit-inner-spin-button {
 input[type="number"].no-spinners {
     -moz-appearance: textfield;
 }
+/* inter-tight-latin-400-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-latin-400-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-latin-400-normal.woff)
+            format("woff");
+    unicode-range:
+        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+        U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* inter-tight-latin-500-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 500;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-latin-500-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-latin-500-normal.woff)
+            format("woff");
+    unicode-range:
+        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+        U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* inter-tight-latin-600-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 600;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-latin-600-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-latin-600-normal.woff)
+            format("woff");
+    unicode-range:
+        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+        U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* inter-tight-cyrillic-400-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-400-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-400-normal.woff)
+            format("woff");
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* inter-tight-cyrillic-500-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 500;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-500-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-500-normal.woff)
+            format("woff");
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* inter-tight-cyrillic-600-normal */
+@font-face {
+    font-family: "Inter Tight";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 600;
+    src:
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-600-normal.woff2)
+            format("woff2"),
+        url(@fontsource/inter-tight/files/inter-tight-cyrillic-600-normal.woff)
+            format("woff");
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
 
 :root {
     font-family:
-        "Inter Variable",
+        "Inter Tight",
         system-ui,
         -apple-system,
         "Segoe UI",
